# tep3

./: CMakeLists.txt  main.cpp
src/AbstractSyntaxTree/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h
src/Command/: Command.cpp  Command.h
src/Node/: ANode.cpp  ANode.h  NodeEnum.h
src/NodeInterface/: INode.h
src/NodeTypes/Literal/: Literal.cpp  Literal.h
src/NodeTypes/Operator/: AOperator.cpp  AOperator.h  Operator.cpp  Operator.h
src/NodeTypes/Variable/: Variable.cpp  Variable.h
src/OperatorType/BinaryOperator/: ABinaryOperator.cpp  ABinaryOperator.h  BinaryOperator.cpp  BinaryOperator.h
src/OperatorType/UniOperator/: AUniOperator.cpp  AUniOperator.h  UniOperator.cpp  UniOperator.h
src/OperatorsFunc/BinaryOperatorsFunc/Addition/: Addition.cpp  Addition.h
src/OperatorsFunc/BinaryOperatorsFunc/Divide/: Divide.cpp  Divide.h
src/OperatorsFunc/BinaryOperatorsFunc/Multiply/: Multiply.cpp  Multiply.h
src/OperatorsFunc/BinaryOperatorsFunc/Substract/: Subtract.cpp  Subtract.h
src/OperatorsFunc/UniOperatorsFunc/Cos/: Cos.cpp  Cos.h
src/OperatorsFunc/UniOperatorsFunc/Sinus/: Sinus.cpp  Sinus.h
